# hwp_automation_rs

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  HncUserActionSample_분석.md  LICENSE  README.md  hwp_addon.html  hwp_addon.md  hwp_core.md  hwp_sd_doc_종류.md
.cargo/: config.toml
crates/hello_hwp_dll/: Cargo.toml
crates/hello_hwp_dll/src/: lib.rs
crates/hello_hwp_ole/: Cargo.toml
crates/hello_hwp_ole/src/: main.rs
crates/hwp_addon/: Cargo.toml  shortcut.md
crates/hwp_addon/src/: debug.rs  ffi.rs  hwp_user_action.rs  ime.rs  lib.rs  shortcut.rs  text_edit.rs  toolbar.rs
crates/hwp_com/: Cargo.toml
crates/hwp_com/src/: lib.rs
crates/hwp_core/: Cargo.toml
crates/hwp_core/src/: com_util.rs  debug.rs  disp_obj.rs  error.rs  h_action.rs  hwp_obj.rs  hwp_types.rs  hwp_ver.rs  lib.rs  variant.rs
crates/hwp_core/src/actions/: app.rs  chars.rs  draw.rs  edit.rs  find.rs  insert.rs  macro_.rs  mod.rs  note.rs  page.rs  para.rs  picture.rs  table.rs  track.rs  view.rs
crates/hwp_core/src/ihwpobject/: lib.rs  mod.rs  movepos.rs
crates/hwp_dabbrev/: Cargo.toml
crates/hwp_dabbrev/src/: hwp_dabbrev_ole.rs  lib.rs  ui.rs
