[package]
name = "hello_hwp_com"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
hwp_com = { version = "0.1.0", path = "../hwp_com" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging", # MessageBoxмЩА PostQuitMessageл•Љ мЬДнХі нХДмИШ
    "Win32_System_Variant",
]
