[package]
name = "hwp_dabbrev"
version = "0.1.0"
license = "MIT"
edition = "2024"

[lib]
name = "hwp_dabbrev"
crate-type = ["cdylib"]

[[bin]]
name = "hwp_dabbrev_ole"
path = "src/hwp_dabbrev_ole.rs"

[dependencies]
hwp_addon = { path = "../hwp_addon" }
hwp_core = { path = "../hwp_core" }
hwp_com = { path = "../hwp_com" }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
